# tetris-wgpu-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml
src/: lib.rs  main.rs
src/game/: mod.rs  palette.rs
src/graphics/: color.rs  mod.rs
src/wgpu_boilerplate/: buffers.rs  mod.rs  shader.wgsl
src/wgpu_boilerplate/camera/: camera_controller.rs  mod.rs
src/wgpu_boilerplate/challenges/: mod.rs
src/wgpu_boilerplate/state/: adapter.rs  buffer.rs  clear_background.rs  device_queue.rs  mod.rs  render.rs  render_pipeline.rs  surface.rs  swap_chain.rs  texture.rs
src/wgpu_boilerplate/state/buffer_queue/: mod.rs
src/wgpu_boilerplate/state/challenges/: mod.rs
src/wgpu_boilerplate/state/shader/: mod.rs  shader.wgsl
tetris/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
tetris/resources/: .gitattributes
tetris/src/: config.rs  lib.rs  main.rs  prod.rs  tests.rs
tetris/src/game/: mod.rs  palette.rs
tetris/src/tetris_input/: mod.rs  utils.rs
tetris/src/tetromino/: circular_num.rs  collisions.rs  coord.rs  direction.rs  mod.rs  tetromino_type.rs
tetris/src/tetromino/collisions/: mod.rs
tetris/src/universe/: audio.rs  color.rs  game.rs  input.rs  mod.rs
tetris/src/universe/rotations/: mod.rs  rotation_direction.rs
thomas/: Cargo.toml
thomas/resources/: .gitattributes
thomas/src/: audio.rs  context.rs  keyboard.rs  lib.rs  resource.rs
thomas/src/graphics/backend/: bg.rs  buffers.rs  camera.rs  font.rs  mod.rs  pipeline.rs  render.rs  texture.rs
thomas/src/graphics/backend/shader/: mod.rs  shader.wgsl
thomas/src/graphics/frontend/: camera_controller.rs  color.rs  font.rs  mod.rs
