[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = "0.9.0"
futures = "0.3.15"
bytemuck = { version="1.7.0", features=["derive"] }
image = "0.23.14"
anyhow = "1.0.42"
cgmath = "0.18.0"
wgpu_glyph = "0.13.0"