[package]
name = "thomas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
futures = "0.3.16"
bytemuck = { version = "1.7.2", features = ["derive"] }
image = "0.23.14"
anyhow = "1.0.43"
cgmath = "0.18.0"
wgpu_glyph = "0.14.1"
log = "0.4.14"
env_logger = "0.9.0"
rodio = "0.14.0"
