[package]
name = "thomas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
wgpu = "0.12.0"
futures = "0.3.19"
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.23.14"
anyhow = "1.0.52"
cgmath = "0.18.0"
wgpu_glyph = "0.16.0"
log = "0.4.14"
env_logger = "0.9.0"
rodio = "0.14.0"
